--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Jinja2==2.7.3
 MarkupSafe==0.23
 SQLAlchemy==0.9.7
 Werkzeug==0.9.6
+coverage==3.7.1
 itsdangerous==0.24
 nose==1.3.4
 wsgiref==0.1.2
