--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
+Cython==0.21.1
 Flask==0.10.1
 Flask-SQLAlchemy==2.0
 Flask-Testing==0.4.2
 Jinja2==2.7.3
 MarkupSafe==0.23
-SQLAlchemy==0.9.7
+SQLAlchemy==0.9.8
 Werkzeug==0.9.6
 coverage==3.7.1
+gevent==1.0.1
+greenlet==0.4.5
 itsdangerous==0.24
 nose==1.3.4
 wsgiref==0.1.2
-cython
-gevent
